[gd_scene load_steps=9 format=3 uid="uid://da5p2bywxt0hm"]

[ext_resource type="Script" path="res://scripts/sword2.gd" id="1_wy2na"]
[ext_resource type="Texture2D" uid="uid://bn3rre65d2ldg" path="res://Assets/Weapons/File.png" id="2_bhtcy"]
[ext_resource type="FontFile" uid="uid://b6qlx45q5gruy" path="res://Assets/UI/Roboto-Regular.ttf" id="3_mt6ea"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n63ux"]
size = Vector2(67, 47)

[sub_resource type="Animation" id="Animation_nqjqb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(13.0625, 5.9375)]
}

[sub_resource type="Animation" id="Animation_d3kfh"]
resource_name = "ht"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.959931, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(13.0625, 5.9375), Vector2(28.477, 5.938), Vector2(13.0625, 5.9375)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xdhex"]
_data = {
"RESET": SubResource("Animation_nqjqb"),
"ht": SubResource("Animation_d3kfh")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y88ln"]
radius = 71.0
height = 164.0

[node name="sword2" type="Node2D"]
position = Vector2(16, -5)
script = ExtResource("1_wy2na")

[node name="Sword" type="Sprite2D" parent="."]
position = Vector2(13.0625, 5.9375)
scale = Vector2(-1.31641, 1.31641)
texture = ExtResource("2_bhtcy")
hframes = 6
vframes = 5
frame = 3

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(7.38781, 3.67365)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(6.5, 2.5)
shape = SubResource("RectangleShape2D_n63ux")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xdhex")
}

[node name="AreaToCollect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaToCollect"]
position = Vector2(15, 4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_y88ln")
debug_color = Color(0, 1, 0.329412, 0.419608)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = -102.0
offset_top = -50.0
offset_right = 604.0
offset_bottom = 44.0
scale = Vector2(0.265, 0.265)
theme_override_fonts/normal_font = ExtResource("3_mt6ea")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "Press E to collect"

[connection signal="body_entered" from="AreaToCollect" to="." method="_on_area_to_collect_body_entered"]
[connection signal="body_exited" from="AreaToCollect" to="." method="_on_area_to_collect_body_exited"]
